# hotel-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 5662c281b167_initial.py  fed3e93b91c9_initial.py
configs/: bot.example.toml  bot.toml.example
envs/: db.env.example
src/bot/: __main__.py  commands.py  config.py  consts.py
src/bot/common/: booking.py
src/bot/db/: repository.py
src/bot/entity/: models.py
src/bot/entity/book/: models.py
src/bot/entity/booking/: handlers.py  models.py
src/bot/entity/user/: enums.py  handlers.py  models.py
src/bot/enums/: user.py
src/bot/handlers/: booking.py  conversation.py  user.py
src/bot/middlewares/: auth.py  db.py  media_group.py
src/bot/models/: __init__.py  booking.py  user.py
src/bot/states/: booking.py  conversation.py
